--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>T´tulo página</h1>
+    <h1>Título página</h1>
     <p>esto es un parrafo</p>
+    <p>esto es otro parrafo</p>
     
 </body>
 </html>
